# crocodealer

./: .travis.yml  CHANGELOG.md  README.md  crocodealer.cabal  example-config.toml
app/: Main.hs
src/: Crocodealer.hs
src/Crocodealer/: ColorTerminal.hs  Config.hs
src/Crocodealer/Command/: Sync.hs
src/Crocodealer/Core/: GitHub.hs  Label.hs
test/: Spec.hs
test/Test/: Config.hs
